# llm-kasten

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kasten/: __init__.py  __main__.py
src/kasten/cli/: __init__.py  _output.py  ask.py  batch.py  compile.py  config_cmd.py  dedup.py  diff.py  export.py  git_cmd.py  graph.py  import_cmd.py  index.py  ingest.py  lint.py  main.py  mcp_cmd.py  note.py  promote.py  repair.py  search.py  serve.py  tag.py  template.py  topic.py  watch.py
src/kasten/compile/: __init__.py  pipeline.py  prompts.py  strategies.py
src/kasten/core/: __init__.py  agent_docs.py  clusters.py  config.py  db.py  enrich.py  frontmatter.py  migrations.py  note.py  patterns.py  similarity.py  sync.py  templates.py  vault.py
src/kasten/graph/: __init__.py
src/kasten/indexgen/: __init__.py  generator.py
src/kasten/ingest/: file.py  pdf.py  web.py
src/kasten/llm/: anthropic_provider.py  embeddings.py  ollama_provider.py  openai_provider.py  provider.py
src/kasten/mcp/: __init__.py  server.py
src/kasten/models/: __init__.py  graph.py  note.py  output.py  search.py
src/kasten/search/: __init__.py  filters.py  fts.py  ranking.py  semantic.py
src/kasten/serve/: __init__.py  renderer.py  server.py
tests/: conftest.py
tests/test_cli/: test_commands.py  test_note_ops.py
tests/test_core/: test_frontmatter.py  test_note.py  test_sync.py  test_vault.py
tests/test_graph/: test_links.py
tests/test_ingest/: test_file_ingest.py
tests/test_search/: test_fts.py
